--- a/locale/en_US/author.xml
+++ b/locale/en_US/author.xml
@@ -340,6 +340,7 @@
         <message key="author.submit.suppFile.typeRequired">Please select the type of your file in the drop-down menu.</message>
         <message key="author.submit.suppFile.siteRequired">Please select the concerned trial site for your file in the drop-down menu.</message>
         <message key="author.submit.suppFile.drugRequired">Please select the concerned drug product for your file in the drop-down menu.</message>
+        <message key="author.submit.suppFile.croRequired">Please select the concerned contract research organization for your file in the drop-down menu.</message>
         
 	<message key="author.submit.suppFile.specifyOtherType">Specify other</message>
 	<message key="author.submit.suppFile.noFile">No file uploaded.</message>
