--- a/locale/en_US/author.xml
+++ b/locale/en_US/author.xml
@@ -275,8 +275,8 @@
         <message key ="author.proposal.type.OR">Operation Research</message>
         <message key="author.submit.form.wordCountAlert">You have exceeded the maximum word limit for abstracts.</message>
 
-        <message key="author.submit.submissionFile">Submission File</message>
-        <message key="author.submit.previousSubmissionFile">Previous Submission File</message>
+        <message key="author.submit.submissionFile">Protocol File</message>
+        <message key="author.submit.previousSubmissionFile">Previous Protocol File</message>
         <message key="author.submit.submitInterimProgressReport.short">Progress report</message>
         <message key="author.submit.submitInterimProgressReport">Submit interim progress report</message>
         <message key="author.submit.submitFinalReport">Submit final report</message>
