Author side: submission tracking

--- a/locale/en_US/author.xml
+++ b/locale/en_US/author.xml
@@ -319,17 +319,17 @@
         <message key="author.submit.suppFile.informedConsent.instruct">The contents of the Informed Consent Form must conform to the highest ethical standards, and should be as approved by level 3 accredited research ethics review committee.</message>        
         <message key="author.submit.suppFile.advertisements">Subject Recruitment Advertisements</message>
         <message key="author.submit.suppFile.advertisements.instruct">Advertising that is intended to be seen or heard by prospective subjects to solicit their participation in a study (e.g. newspaper, radio, TV, bulletin boards, posters, and flyers that are intended for prospective subjects).</message>
-        <message key="author.submit.suppFile.relatedPublications">Trial related presentations/ publications list</message>
+        <message key="author.submit.suppFile.relatedPublications">Trial related presentations or publications list</message>
         <message key="author.submit.suppFile.relatedPublications.instruct">If the study has a list of presentations/publications, upload these details in the section. Otherwise, leave it blank.</message>        
-        <message key="author.submit.suppFile.brochure">Investigator’s brochure</message>
+        <message key="author.submit.suppFile.brochure">Investigator's brochure</message>
         <message key="author.submit.suppFile.brochure.instruct">The Investigator’s Brochure (IB) should comply with ICH Good Clinical Practice Guideline. It should reflect all available information and evidence that supports the relevance/rationale for the proposed clinical trial and the safe use of the investigational drug product (IDP) in the trial.</message>
-        <message key="author.submit.suppFile.impd">Investigational medicinal product dossier (IMPD)</message>
+        <message key="author.submit.suppFile.impd">Investigational medicinal product dossier</message>
         <message key="author.submit.suppFile.impd.instruct">An IMPD should include summaries of information related to the manufacture and control of the IDP, data from non-clinical studies, early clinical trial and human experience data, and overall risk and benefit assessment.</message>
         <message key="author.submit.suppFile.smpc">Approved Summary of Product Characteristics</message>
         <message key="author.submit.suppFile.smpc.instruct">The approved Summary of Product Characteristics (SmPC) is used according to the terms of the marketing authorization.</message>
-        <message key="author.submit.suppFile.labels">Label(s)</message>
+        <message key="author.submit.suppFile.labels">Label</message>
         <message key="author.submit.suppFile.labels.instruct">The label consists of legibly written, printed, or graphic matter on the immediate container of the IDP.</message>
-	<message key="author.submit.suppFile.gmp">GMP Certificate(s) of manufacturer</message>
+	<message key="author.submit.suppFile.gmp">GMP Certificate of manufacturer</message>
 	<message key="author.submit.suppFile.gmp.instruct">GMP certificate(s) issued by the regulatory authority in the country of the manufacturer(s) and should state that the facilities and operations of the manufacturer(s) conform to GMP as recommended by WHO or other equivalent standards.</message>
 	<message key="author.submit.suppFile.delegation">Letter of delegation from Sponsor</message>
 	<message key="author.submit.suppFile.delegation.instruct">The letter of delegation from sponsor allowing the applicant to conduct the trial is a statement containing the name and address of the CRO, identification of the clinical study, and the obligations delegated</message>
