March Modifications #5 on Recruitment information

--- a/locale/en_US/locale.xml
+++ b/locale/en_US/locale.xml
@@ -626,7 +626,7 @@
             </ul>
         ]]>
     </message>
-    <message key="proposal.recruitment.info">Public information</message>
+    <message key="proposal.recruitment.info">Recruiting Study Subject Information</message>
     <message key="proposal.recruitment.info.instruct">Provide recruitment information for potential participants. This information will be publicly displayed and can be modified anytime until completion of the research</message>    
     <message key="proposal.recruitment.adScheme">Advertisement scheme</message>
     <message key="proposal.recruitment.adScheme.instruct">Are you planning to use any advertisement scheme(s) for recruiting participants?</message>    
