--- a/locale/en_US/locale.xml
+++ b/locale/en_US/locale.xml
@@ -93,7 +93,7 @@
 	<message key="log.author.submitted">{$authorName} has submitted a proposal, ID "{$submissionId}", for "{$reviewType}".</message>
         
         <message key="about.governance">Governance of Health Research</message>   
-        <message key="about.committees">Ethics</message>   
+        <message key="about.committees">Review Committees</message>   
         <message key="about.grants">Grants</message>   
         <message key="about.files">Files</message>   
         <message key="about.contactlinks">Contacts &amp; Links</message>   
@@ -202,7 +202,7 @@
 	<!-- Common Messages -->
         <message key="common.openJournalSystems">The Health Research Portal</message>
 	<message key="common.confirmComplete">Are you sure you wish to mark this task as completed? You may not be able to make changes afterwards.</message>
-        <message key="common.homePageText"><![CDATA[<p>Papua New Guinea Health Research Portal is an <i>integrated online health research management system</i> that offers substantial benefits for all stakeholders in health research. The Portal aims to improve accountability, efficiency and quality of health research conducted in Papua New Guinea by providing information on all ongoing research and hence increasing transparency and by streamlining the ethics review process.<br/><br/>The Portal can be used to:<br/><br/><b>Submit research proposals</b> for review to Papua New Guinea IRB 24x7 from anywhere. Researchers need to register on the Portal. Once registered, you will have a permanent account and be able to submit research proposal in a paper-less way and to track the review status of your proposals.<br/><br/><b>Search ongoing and completed health research</b> from June 2014 onwards through a publically accessible research registry. No registration or log-in is required to search the ongoing research.<br/><br/><b>Access complete research reports</b> for the researches  started since 2014 once the research is completed. [Since the system has been launched only in June 2014, there are no research reports in the system at present, but will be added as and when a research is completed or over time]<br/><br/><b>Access information on all the applicable guidelines, rules, and regulations</b> related to health research (being added…).<br/><br/><b>Access a “Researchers' Directory”</b> containing information on the national and international researchers doing research in Papua New Guinea (will be added soon...).</p>]]></message>
+        <message key="common.homePageText"><![CDATA[<p>Papua New Guinea Health Research Portal is an <i>integrated online health research management system</i> that offers substantial benefits for all stakeholders in health research. The Portal aims to improve accountability, efficiency and quality of health research conducted in Papua New Guinea by providing information on all ongoing research and hence increasing transparency and by streamlining the review process.<br/><br/>The Portal can be used to:<br/><br/><b>Submit research proposals</b> for review to Papua New Guinea IRB 24x7 from anywhere. Researchers need to register on the Portal. Once registered, you will have a permanent account and be able to submit research proposal in a paper-less way and to track the review status of your proposals.<br/><br/><b>Search ongoing and completed health research</b> from June 2014 onwards through a publically accessible research registry. No registration or log-in is required to search the ongoing research.<br/><br/><b>Access complete research reports</b> for the researches  started since 2014 once the research is completed. [Since the system has been launched only in June 2014, there are no research reports in the system at present, but will be added as and when a research is completed or over time]<br/><br/><b>Access information on all the applicable guidelines, rules, and regulations</b> related to health research (being added…).<br/><br/><b>Access a “Researchers' Directory”</b> containing information on the national and international researchers doing research in Papua New Guinea (will be added soon...).</p>]]></message>
 	<message key="common.payment">Payment</message>
 	<message key="common.payments">Payments</message>
 	<message key="common.pageHeader.altText">Page Header</message>
@@ -291,11 +291,11 @@
 	-->
 
 	<!-- Common Section Terms -->
-	<message key="section.section">Ethics Review Committee</message>
+	<message key="section.section">Review Committee</message>
         <message key="section.sectionAbbrev">Committee</message>
-	<message key="section.sections">Ethics Review Committees</message>
+	<message key="section.sections">Review Committees</message>
 
-	<message key="section.title">Ethics Committee title</message>
+	<message key="section.title">Committee title</message>
 	<message key="section.abbreviation">Abbreviation</message>
         <message key="section.region">Region</message>
         <message key="section.bankAccount">Payment information (optional)</message>        
@@ -315,7 +315,7 @@
 	<message key="article.authors">Investigator(s)</message> /*Replaced "Authors" with "Investigator"*/
 	<message key="article.indexingInformation">Indexing Information</message>
 	<message key="article.metadata">Metadata</message>
-	<message key="article.journalSection">Ethics Review Committee</message>
+	<message key="article.journalSection">Review Committee</message>
 
 	<message key="article.file">File</message>
         <message key="article.files">Files</message>
@@ -864,7 +864,7 @@
         <message key="proposal.nationwide">Nationwide research</message>
         <message key="proposal.withHumanSubjects">Involves human subjects</message>
         <message key="proposal.studentInitiatedResearch">Student research</message>
-        <message key="proposal.ethicsCommittee">Ethics Committee</message>
+        <message key="proposal.ethicsCommittee">Review Committee</message>
         <message key="proposal.studentInstitution">Institution</message>
         <message key="proposal.studentSupervisor">Supervisor of the student(s)</message>        
         <message key="proposal.studentSupervisorName">Full Name and title</message>
@@ -1065,7 +1065,7 @@
 	<message key="user.role.managers">Administrators</message> /* Replaced Journal Managers with Committee Admins - spf */
     <message key="user.role.editors">Secretaries</message>
     <message key="user.role.coordinators">Coordinators</message>
-    <message key="user.role.sectionEditors">Ethics Committees Secretaries</message>
+    <message key="user.role.sectionEditors">Review Committees Secretaries</message>
         
 	<message key="user.role.layoutEditors">Layout Editors</message>
 	<message key="user.role.copyeditors">Copyeditors</message>
@@ -1412,7 +1412,7 @@ Active is how many reviews are currently being considered or underway.]]></messa
 	<message key="reviewer.meetings.noSubmissions">No Proposals</message>
 	<message key="reviewer.meetings.lastReply">Last reply</message>
     <message key="reviewer.meetings.replyStatus">Reply Status</message>
-	<message key="reviewer.meetings.erc">Ethics Review Committee</message>
+	<message key="reviewer.meetings.erc">Review Committee</message>
 	<message key="reviewer.meetings.scheduleStatus">Schedule Status</message>
 	<message key="reviewer.meetings.details">Details</message>
 	<message key="reviewer.meetings.reply">Reply</message>
@@ -1727,12 +1727,9 @@ current password.<br /><br />Enter your email address below to reset your passwo
 	<message key="archive.issueUnavailable">Issue Unavailable</message>
 	
 	<message key="about.statistics">Statistics</message>
-	<message key="about.journalContact">The National Ethics Committee for Health Research</message>
 	<message key="about.aboutTheJournal">Governance, Policies, and Procedures for Health Research</message>
 	<message key="about.history">Health Research Portal History</message>
-	  
-        <message key="about.editorialTeam">The Ethics Committee of the University of Health Sciences</message>
-        
+	          
 	<message key="about.editorialTeam.biography">Biography</message>
 	<message key="about.editorialPolicies">Editorial Policies</message>
 	<message key="about.focusAndScope">Focus and Scope</message>
