--- a/lib/pkp/locale/en_US/user.xml
+++ b/lib/pkp/locale/en_US/user.xml
@@ -110,7 +110,7 @@
 	<message key="user.role.reader">Reader</message>
 	<message key="user.role.readers">Readers</message>
 	<message key="user.role.reviewer">Committee Member</message>/*MSB replaced Reviewers with Committee Member*/)
-	<message key="user.role.reviewers">Ethics Committees Members</message> /*From reviewers*/
+	<message key="user.role.reviewers">Review Committees Members</message> /*From reviewers*/
 	<message key="user.role.siteAdmin">Site Administrator</message>
 	<message key="user.role.siteAdmins">Site Administrators</message>
 	<message key="user.roles">Roles</message>
