--- a/locale/en_US/author.xml
+++ b/locale/en_US/author.xml
@@ -109,9 +109,9 @@
 	<message key="author.submissions.noSubmissions">No proposals.</message>
 	<message key="author.submit.howToSubmit"><![CDATA[Encountering difficulties? Contact <a href="mailto:{$supportEmail}">{$supportName}</a> for assistance ({$supportPhone}).]]></message>
 	<message key="author.submit.howToSubmitNoPhone"><![CDATA[Encountering difficulties? Contact <a href="mailto:{$supportEmail}">{$supportName}</a> for assistance.]]></message>
-	<message key="author.submit.journalSection">Ethics Committees</message>
+	<message key="author.submit.journalSection">Review Committees</message>
 	<message key="author.submit.journalSectionDescription">This section allows you to choose to which committee to send your proposal. Please choose carefully.</message>
-	<message key="author.submit.selectSection">Please select an Ethics Committee...</message>
+	<message key="author.submit.selectSection">Please select a Review Committee...</message>
 	<message key="author.submit.submissionLocale">Submission Language</message>
 	<message key="author.submit.submissionLocaleDescription">This site accepts proposals in several languages. Choose the primary language of the submission from the pulldown below.</message>
 	<message key="author.submit.submissionChecklist">Submission Checklist</message>
@@ -122,7 +122,7 @@
 	<message key="author.submit.commentsForEditor">Comments for the Secretariat</message>
 	<message key="author.submit.comments">Enter text (optional)</message>
     <message key="author.submit.form.noFileSelected">No file selected.</message>
-	<message key="author.submit.form.sectionRequired">Please select an appropriate Ethics Committee for your proposal.</message>
+	<message key="author.submit.form.sectionRequired">Please select an appropriate Review Committee for your proposal.</message>
 	<message key="author.submit.form.supervisorName">Please provide the name of the academic supervisor.</message>
 	<message key="author.submit.form.supervisorEmail">Please provide the email of the academic supervisor.</message>
     <message key="author.submit.form.otherInternationalGrantName">Please specify the agency</message>
@@ -207,7 +207,7 @@
         <message key="author.submit.form.studentInitiatedResearch">Please select Yes or No (Student Initiated Research).</message>
         <message key="author.submit.form.studentInstitution">Please specify the institution of the student.</message>
         <message key="author.submit.form.academicDegree">Please specify the academic degree of the student.</message>
-        <message key="author.submit.form.ethicsCommittee">Please select an Ethics Committee.</message>
+        <message key="author.submit.form.ethicsCommittee">Please select a Review Committee.</message>
         <message key="author.submit.form.dataCollection">Please select the Data Collection.</message>
 	<message key="author.submit.form.abstractRequired">Please enter the abstract of your research proposal.</message>
         <message key="author.submit.form.backgroundRequired">Please enter the background of your research proposal. Background: Key issues under investigation, importance, what is known already, and why this study.</message>
@@ -297,7 +297,7 @@
 	<message key="author.submit.replaceSubmissionFile">Replace submission file</message>
 	<message key="author.submit.noSubmissionFile">No file uploaded. You need to upload your main proposal for going to step 8</message>
 	<message key="author.submit.noSubmissionConfirm">Are you sure you wish to continue without uploading a file?</message>
-	<message key="author.submit.supplementaryFilesInstructions">This step allows Supplementary Files to be added to a submission. The files, which can be in any format, might include (a) research instruments, (b) data sets, which comply with the terms of the study's research ethics review, (c) sources that otherwise would be unavailable to reviewers, (d) figures and tables that cannot be integrated into the text itself, or other materials that add to the contribution of the work.</message>
+	<message key="author.submit.supplementaryFilesInstructions">This step allows Supplementary Files to be added to a submission. The files, which can be in any format, might include (a) research instruments, (b) data sets, which comply with the terms of the study's research review, (c) sources that otherwise would be unavailable to reviewers, (d) figures and tables that cannot be integrated into the text itself, or other materials that add to the contribution of the work.</message>
 	<message key="author.submit.supplementaryFiles.saveToUpload">Click Save to upload file.</message>
 	<message key="author.submit.forgottenSubmitSuppFile">Are you sure you wish to continue without uploading the supplementary file you have chosen?</message>
 	<message key="author.submit.noSupplementaryFiles">No supplementary files have been added to this submission.</message>
