--- a/locale/en_US/locale.xml
+++ b/locale/en_US/locale.xml
@@ -334,7 +334,7 @@
 	<message key="article.suppFile.gmp">GMP Certificate of manufacturer</message>
 	<message key="article.suppFile.delegation">Letter of delegation from Sponsor</message>
         <message key="article.suppFile.CV">CV of principal investigator</message>
-        <message key="article.suppFile.policy">Insurance policy in the event of injury or death</message>
+        <message key="article.suppFile.policy">Policy on Compensation to subjects in case of injury or death</message>
 	<message key="article.suppFiles">Supplementary File(s)</message>
 	<message key="article.suppFilesAbbrev">Supp. Files</message>
         <message key="article.suppFilesAbbrevInstruct">Supplementary files submitted by the Investigator. Please click on a title (blue link) for downloading the concerned proposal.</message>
@@ -631,7 +631,7 @@
     <message key="proposal.recruitment.adScheme">Advertisement scheme</message>
     <message key="proposal.recruitment.adScheme.instruct">Are you planning to use any advertisement scheme(s) for recruiting participants?</message>    
     <message key="proposal.recruitment.compensationPolicy">Compensation in case of injury or death?</message>
-    <message key="proposal.recruitment.compensationPolicy.instruct">Available Policy on Compensation to subjects in case of injury or death?</message>    
+    <message key="proposal.recruitment.compensationPolicy.instruct">Available Policy on Compensation to subjects in case of injury or death? The amount of compensation paid shall be appropriate to the nature, severity and persistence of the injury.</message>    
 
     <message key="proposal.drugInfo">Drug product</message>   
     <message key="proposal.drugInfo.add">Add another drug product</message>    
